[tool.poetry]
name = "langchain-zero-to-hero-agents"
version = "0.1.0"
description = ""
authors = ["Cutwell"]
readme = "README.md"
packages = [{include = "langchain_zero_to_hero_agents"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
langchain-openai = "^0.0.7"
langchainhub = "^0.1.14"
langserve = {extras = ["all"], version = "^0.0.42"}
duckduckgo-search = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
